# crypto-execution-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
crypto_execution_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: execution_manifesto.md  microstructure.md
engine/: decision.py  state.py
execution/: metrics_engine.py  order_engine.py  order_state.py  policy.py
health/: health.py
observer/: config.py  logger.py  order_sim.py  paths.py  regime.py  run.py  stream.py  utils.py
permission/: .gitignore  permission.py
risk/: risk_guard.py
tests/: test_smoke_imports.py
